Fix sidebar collapse

--- a/app/styles/_navbar.scss
+++ b/app/styles/_navbar.scss
@@ -6,10 +6,3 @@
   background-color: $cft-blue;
   padding-bottom: 0rem;
 }
-
-.sinc-top-nav__menu-text {
-  display: none;
-  @media (min-width: 544px) {
-    display: initial;
-  }
-}
