--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -4,26 +4,27 @@
 
 .sinc-sidebar__section {
   margin-bottom: 1rem;
+  flex-direction: column;
+  padding: 0;
 }
 
-.sinc-sidebar__header h2 {
+.sinc-sidebar__header {
   background: $cft-blue;
   color: #fff;
   font-size: 1.5rem;
   margin-bottom: 0;
+  margin-right: 0;
   padding: 0.5rem;
+  width: 100%;
 }
 
 .sinc-sidebar__collapse-button {
   // Always hide on medium or larger screens
   color: rgba(255, 255, 255, 1);
-  display: block;
+  // display: block;
   &:hover, &:focus {
     color: rgba(255, 255, 255, .75);
     text-decoration: none;
-  }
-  @media (min-width: 768px) {
-    display: none !important;
   }
   text-decoration: none;
 }
@@ -31,14 +32,15 @@
 .sinc-sidebar__menu {
   border: solid 1px #b1aebf;
   background: #f5f5f5;
-  // Always show menus on medium or larger screens
-  @media (min-width: 768px) {
-    display: block !important;
-  }
 }
 
 .sinc-sidebar__icon {
   margin-right: 0.5rem;
+}
+
+.sinc-sidebar__menu-items {
+  border: solid 1px #b1aebf;
+  width: 100%;
 }
 
 .sinc-sidebar__menu-item > a {
@@ -52,4 +54,10 @@
     text-decoration: none;
   }
   text-decoration: none;
+}
+
+.sinc-sidebar__toggler {
+  border: none;
+  margin-top: 0.5rem;
+  right: 0;
 }
